<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Khon Kaen Flood Helper(KKFH)</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Navigation</string>
    <string name="title_section3">Find Evacuation centers</string>
    <string name="title_section4">About us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Change profile</string>
    <string name="app_exit">Do you want to exit?</string>
    <string name="app_exit_y">Yes</string>
    <string name="app_exit_n">No</string>
    <string name="regtxt_name">Name</string>
    <string name="regtxt_phone">Phone</string>
    <string name="regtxt_cd">Congenital disease</string>
    <string name="regbtn_signup">Sign Up</string>
    <string name="regbtn_signup_change">Update</string>
    <string name="help">Help me</string>
    <string name="report">Report flood</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="water_level">Water level at your location.</string>
    <string name="meter">meter</string>

    <string name="find_current">People</string>
    <string name="find_max">Capacity</string>

    <!--fragment_find3-->
    <string name="tvAdd_find3">Address</string>
    <string name="tvHP_find3">Detail</string>
    <string name="tvD_find3">Create</string>
    <string name="tvH_find3">People</string>
    <string name="tvG_find3">Capacity</string>
    <string name="btnG_find3">Get directions</string>

    <!--string Toast RegisterActivity-->
    <string name="toast1_RegActivity">Please fill all of information.</string>
    <string name="toast2_RegActivity">Register complete.</string>
    <string name="toast3_RegActivity">Register fail.</string>

    <!--string Text Navigation-->
    <string name="text_Nevigation">Activity must implement NavigationDrawerCallbacks.</string>

    <!--string Toast ReportActivity-->
    <string name="toast1_reportActivity">Thank you for your report</string>
    <string name="toast2_reportActivity">Please fill water level</string>

    <!--string Text MainActivity-->
    <string name="text_MainActivity">My current location is: </string>
    <string name="la_MainActivity">Latitude</string>
    <string name="long_MainActivity">Longitude</string>
    <string name="toast1_MainActivity">Gps Disabled</string>
    <string name="toast2_MainActivity">Gps Enabled</string>

    <!--string Text HomeActivity-->
    <string name="title_helpActivity">People</string>
    <string name="msg_helpActivity">How many people want to help</string>
    <string name="cancel_helpActivity">Cancel</string>
    <string name="send_helpActivity">Send</string>
    <string name="success_helpActivity">Success</string>
    <string name="successMsg_helpActivity">Request success and please wait for help</string>
    <string name="fail_helpActivity">Fail</string>
    <string name="failMsg_helpActivity">Can\'t find your location please try again</string>
    <string name="ok_helpActivity">OK</string>

    <!--string Toast ChangeProfileActivity-->
    <string name="toast1_changeProfile">Please fill all of information.</string>
    <string name="toast2_changeProfile">Update complete.</string>
    <string name="toast3_changeProfile">Update fail.</string>

    <string-array name="province_spin">
        <item>กรุงเทพมหานคร</item>
        <item>กระบี่</item>
        <item>กาญจนบุรี</item>
        <item>กาฬสินธุ์</item>
        <item>กำแพงเพชร</item>
        <item>ขอนแก่น</item>
        <item>จันทบุรี</item>
        <item>ฉะเชิงเทรา</item>
        <item>ชลบุรี</item>
        <item>ชัยนาท</item>
        <item>ชัยภูมิ</item>
        <item>ชุมพร</item>
        <item>เชียงราย</item>
        <item>เชียงใหม่</item>
        <item>ตรัง</item>
        <item>ตราด</item>
        <item>ตาก</item>
        <item>นครนายก</item>
        <item>นครปฐม</item>
        <item>นครพนม</item>
        <item>นครราชสีมา</item>
        <item>นครศรีธรรมราช</item>
        <item>นครสวรรค์</item>
        <item>นนทบุรี</item>
        <item>นราธิวาส</item>
        <item>น่าน</item>
        <item>บึงกาฬ</item>
        <item>บุรีรัมย์</item>
        <item>ปทุมธานี</item>
        <item>ประจวบคีรีขันธ์</item>
        <item>ปราจีนบุรี</item>
        <item>ปัตตานี</item>
        <item>พระนครศรีอยุธยา</item>
        <item>พังงา</item>
        <item>พัทลุง</item>
        <item>พิจิตร</item>
        <item>พิษณุโลก</item>
        <item>เพชรบุร์</item>
        <item>เพชรบูรณ์</item>
        <item>แพร่</item>
        <item>พะเยา</item>
        <item>ภูเก็ต</item>
        <item>มหาสารคาม</item>
        <item>มุกดาหาร</item>
        <item>แม่ฮ่องสอน</item>
        <item>ยะลา</item>
        <item>ยโสธร</item>
        <item>ร้อยเอ็ด</item>
        <item>ระนอง</item>
        <item>ระยอง</item>
        <item>ราชบุรี</item>
        <item>ลพบุรี</item>
        <item>ลำปาง</item>
        <item>ลำพูน</item>
        <item>เลย</item>
        <item>ศรีสะเกษ</item>
        <item>สกลนคร</item>
        <item>สงขลา</item>
        <item>สตูล</item>
        <item>สมุทรปราการ</item>
        <item>สมุทรสงคราม</item>
        <item>สมุทรสาคร</item>
        <item>สระแก้ว</item>
        <item>สระบุรี</item>
        <item>สิงห์บุรี</item>
        <item>สุโขทัย</item>
        <item>สุพรรณบุรี</item>
        <item>สุราษฎร์ธานี</item>
        <item>สุรินทร์</item>
        <item>หนองคาย</item>
        <item>หนองบัวลำภู</item>
        <item>อ่างทอง</item>
        <item>อุดรธานี</item>
        <item>อุทัยธานี</item>
        <item>อุตรดิตถ์</item>
        <item>อุบลราชธานี</item>
        <item>อำนาจเจริญ</item>
    </string-array>

</resources>
