<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:id="@+id/linearLayout" >

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button"
            android:singleLine="false"
            android:background="@drawable/selector_btn_success"
            android:layout_marginRight="10dp"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/button2"
            android:background="@drawable/selector_btn_primary"
            android:layout_marginLeft="10dp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/water_level"
            android:id="@+id/textView"
            android:layout_alignBaseline="@+id/editText"
            android:layout_alignBottom="@+id/editText"
            android:layout_alignParentLeft="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/meter"
                android:id="@+id/textView2" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>